# egon

./: .gitignore  CLAUDE.md  DESIGN.md  Egon Context Recall.bat  Egon.spec  Launch Connect Widget.vbs  Launch Egon.bat  Launch Egon.vbs  README.md  Start Egon Mind Service.bat  build_exe.py  egon.py  egon_launcher.py  panop_env.json.example  pyproject.toml
.agents/: AGENTS.md
docs/: AGENT_ENFORCEMENT.md  CORE_RUNTIME_MIGRATION.md  DATA_AUTOMATION.md  FILES_INTEGRATION.md  KMS_CLASSIFIER.md  SHARED_WORKSPACE.md  SHARING_AUDIT_2026-06-12.md  UNIFIED_MIND_PLAN.md
egon_app/: __init__.py  api.py  data.py  health.py  main.py  theme.py  window.py
lib/: actions.py  agent_gate.py  agent_state_guard.py  agent_wake_bridge.py  auto_hydrate_crawler.py  body_classify.py  bookmark_export.py  canonical_classifier.py  canonical_fs.py  categorical_mind.py  categorical_synthesizer.py  chat_store.py  concept_graph.py  connection_client.py  connection_engine.py  cross_search.py  deep_links.py  discovery_watchers.py  distill_student.py  drive.py  egon_chat.py  egon_paths.py  export_inbox.py  file_indexer.py  gemini_runner.py  goal_tracker.py  google_oauth.py  headroom_proc.py  hermes_monitor.py  hermes_runner.py  hydration_worker.py  insight_cards.py  kms_classifier.py  kms_knn.py  kms_ml.py  lazy_httpx.py  ledger.py  masterlaw.py  mind_activation.py  mind_audit.py  (+54 more)
prompts/: daily_pass.md
scripts/: _setup_notion_status_page.py  apply_live_library.py  audit_body_sample.py  backfill_april_zotero_bookmarks.py  backup_hot_to_drive.py  bootstrap_shared_workspace.py  build_kms_training.py  (+88 more)
(+106 files in other folders)
