[project]
name = "egon"
version = "0.3.0"
description = "Egon - native visual control plane for Bruno's KMS."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.11",
    "nicegui>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "requests-oauthlib>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.2",
    "playwright>=1.50",
    "websockets>=13.0",
    "zeroconf>=0.149",
]

[project.scripts]
egon = "egon_app.main:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "numpy>=2.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
